@@ -20,36 +20,52 @@ package org.apache.ignite.internal.util;
  * initialization effects.
  */
 public class FeatureChecker {
-    /** Required Options to Run on Java 9, 10, 11. */
-    public static final String JAVA_9_10_11_OPTIONS = "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED\n" +
+    /**
+     * Required JVM options for a node to run on JDK 17+: the canonical runtime list,
+     * identical to {@code bin/include/jvmdefaults.sh} and {@code bin/include/jvmdefaults.bat}.
+     * (The build/test list lives in {@code .mvn/jvm.config} and the parent poms' surefire
+     * argLine and is a superset with test-only opens.)
+     */
+    private static final String JAVA_OPTIONS =
+        "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED\n" +
         "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED\n" +
         "--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED\n" +
         "--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED\n" +
         "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED\n" +
-        "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED\n" +
-        "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED\n" +
-        "--illegal-access=permit";
-
-    /** Required Options to Run on Java 15 and higher. */
-    public static final String JAVA_15_OPTIONS =
         "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED\n" +
         "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED\n" +
         "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED\n" +
+        "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED\n" +
         "--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED\n" +
         "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED\n" +
         "--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED\n" +
         "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED\n" +
         "--add-opens=java.base/java.io=ALL-UNNAMED\n" +
+        "--add-opens=java.base/java.net=ALL-UNNAMED\n" +
         "--add-opens=java.base/java.nio=ALL-UNNAMED\n" +
+        "--add-opens=java.base/java.security.cert=ALL-UNNAMED\n" +
         "--add-opens=java.base/java.util=ALL-UNNAMED\n" +
         "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED\n" +
         "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED\n" +
-        "--add-opens=java.base/java.lang=ALL-UNNAMED";
+        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED\n" +
+        "--add-opens=java.base/java.lang=ALL-UNNAMED\n" +
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED\n" +
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED\n" +
+        "--add-opens=java.base/java.math=ALL-UNNAMED\n" +
+        "--add-opens=java.base/java.time=ALL-UNNAMED\n" +
+        "--add-opens=java.base/java.text=ALL-UNNAMED\n" +
+        "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED\n" +
+        "--add-opens=java.base/sun.security.x509=ALL-UNNAMED\n" +
+        "--add-opens=java.logging/java.util.logging=ALL-UNNAMED\n" +
+        "--add-opens=java.management/sun.management=ALL-UNNAMED\n" +
+        "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED\n" +
+        "--add-opens=java.sql/java.sql=ALL-UNNAMED";
 
-    /** Java version specific warning to be added in case access failed */
+    /** Warning appended to runtime errors caused by missing JVM options. */
     public static final String JAVA_VER_SPECIFIC_WARN =
         "\nPlease add the following parameters to JVM startup settings and restart the application: {parameters: " +
-            JAVA_9_10_11_OPTIONS +
+            JAVA_OPTIONS +
             "\n}" +
-            "\nSee https://www.gridgain.com/docs/latest/getting-started/quick-start/java#running-gridgain-with-java-11-or-later for more information.";
+            "\nSee https://www.gridgain.com/docs/latest/getting-started/quick-start/java#running-gridgain-with-java-11-or-later "
+            + "for more information.";
 }
